syntax = "proto3";

package viewer.v1;

message Vector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Vector2 {
  float x = 1;
  float y = 2;
}

message Quaternion {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

// Represents a color in RGB format. All values are in the range [0, 1].
message RGBA {
  float r = 1;
  float g = 2;
  float b = 3;
  float a = 4;
}

// Represents a UUID v7 (128-bit) value.
message Uuid {
  bytes bytes = 1;
}
